--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
              <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="/Skills.html">Skills</a></li>
-                <li><a href="/Blogs.html">Blogs</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Blogs.html">Blogs</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
 
