--- a/Blogs.html
+++ b/Blogs.html
@@ -13,10 +13,10 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Skillst.html">Skills</a></li>
-                <li><a href="/Blogs.html">Blogs</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Skillst.html">Skills</a></li>
+                <li><a href="Blogs.html">Blogs</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -85,7 +85,7 @@
                     In conclusion, Java is a powerful and versatile programming language that offers a wide range of features and benefits. Its portability, reliability, and security make it an essential tool for developing cross-platform applications and web applications. As technology continues to evolve, Java will undoubtedly play an important role in shaping the digital landscape.</P>
             </div>
             <div class="btn">
-                <a href="/Contact.html"><button>Contact Me</button></a> 
+                <a href="Contact.html"><button>Contact Me</button></a> 
              </div>
             
 
