--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="name" > Vinayak Singh Rathour </div>
                <div class="about"> Software Developer , Actor </div>
             <div class="btn">
-               <a href="/About.html"><button>More About Me</button></a> 
+               <a href="About.html"><button>More About Me</button></a> 
             </div>
             </div>
              
