--- a/About.html
+++ b/About.html
@@ -13,10 +13,10 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Skills.html">Skills</a></li>
-                <li><a href="/Blogs.html">Blogs</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Blogs.html">Blogs</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
  </div>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="btn">
-        <a href="/Skills.html"><button>My Skills</button></a>
+        <a href="Skills.html"><button>My Skills</button></a>
         </div>
 
  </div>
