--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <nav>
             
              <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Skills.html">Skills</a></li>
                 <li><a href="Blogs.html">Blogs</a></li>
