--- a/Blogs.html
+++ b/Blogs.html
@@ -12,7 +12,7 @@
     <div class="sidebar sidebarGo">
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Skillst.html">Skills</a></li>
                 <li><a href="Blogs.html">Blogs</a></li>
