--- a/About.html
+++ b/About.html
@@ -15,6 +15,7 @@
                 <li><a href="">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Project.html">Projects</a></li>
                 <li><a href="Blogs.html">Blogs</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
