--- a/Skills.html
+++ b/Skills.html
@@ -31,14 +31,16 @@
            </div>
         <div class="skillscontainer">
             <h1>My Skills</h1>
-            <div class="skillitem"> HTML:<div class="skill"></div></div>
-           <div class="skillitem"> CSS:<div class="skill"></div></div>
-           <div class="skillitem" > JAVASCRIPT:<div class="skill"></div></div>
-           <div class="skillitem"> JAVA:<div class="skill"></div></div>
-           <div class="skillitem"> DSA:<div class="skill"></div></div>
-           <div class="skillitem"> MySQL:<div class="skill"></div></div>
-           <div class="skillitem">WEB DEVELOPMENT:<div class="skill"></div></div>
-           <div class="skillitem">ANDROID DEVELOPMENT:<div class="skill"></div></div>
+           <div class="skillitem">HTML</div>
+           <div class="skillitem"> CSS</div>
+           <div class="skillitem" > JavaScript</div>
+           <div class="skillitem"> Java</div>
+           <div class="skillitem"> DSA</div>
+           <div class="skillitem"> MySQL</div>
+           <div class="skillitem">XML</div>
+           <div class="skillitem">Node js</div>
+           <div class="skillitem">Web Development</div>
+           <div class="skillitem">Android Development</div>
 
          </div>
          
